--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <meta property="og:image" content="http://windyboy.freevnn.com/games/ctr/fb.png" />
     <meta property="og:site_name" content="Cut the Rope" />
 
-    <meta name="viewport" content="width=1024, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0;">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script type="text/javascript" src="/js/detectmobilebrowser.js" ></script>
     <link href="css/ctr.css?438" rel="stylesheet" type="text/css">
     <script src="scripts/sm2.js?438" type="text/javascript"></script>
@@ -36,7 +35,27 @@
     <div id="fb-root"></div>
 
     <style  type="text/css">
-        .hideBeforeLoad, #loaderWindow, #popupWindow { display: none; }  
+        .hideBeforeLoad, #loaderWindow, #popupWindow { display: none; } 
+	    #gameContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+#gameArea {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#c {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
     </style>
 
     <div id="gameContainer" >
