--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <meta property="og:image" content="http://windyboy.freevnn.com/games/ctr/fb.png" />
     <meta property="og:site_name" content="Cut the Rope" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Updated viewport meta tag -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    
 	<script type="text/javascript" src="/js/detectmobilebrowser.js" ></script>
     <link href="css/ctr.css?438" rel="stylesheet" type="text/css">
     <script src="scripts/sm2.js?438" type="text/javascript"></script>
